--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/testem",
+    "only-mocha": "NODE_PATH=. ./node_modules/.bin/mocha -R tap test/**/*.test.js",
     "start": "node start.js"
 
   },
